--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 __pycache__/manage.cpython-310.pyc
-blog/__pycache__/__init__.cpython-310.pyc
-blog/__pycache__/admin.cpython-310.pyc
-blog/__pycache__/apps.cpython-310.pyc
-blog/__pycache__/models.cpython-310.pyc
-blog/__pycache__/urls.cpython-310.pyc
-blog/__pycache__/views.cpython-310.pyc
-blog/migrations/__init__.py
-blog/migrations/__pycache__/__init__.cpython-310.pyc
 .env
+blog/__pycache__
+blog/migrations
+live_score/__pycache__
+
